@startuml UC33_ViewLabQueue_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class LabOrderController {
    + getPendingLabOrders(userDetails: UserDetails): ResponseEntity<ApiResponse<List<LabOrderResponse>>>
}

interface LabOrderService {
    + getLabQueue(labTechnicianId: Long): List<LabOrderResponse>
}

class LabOrderServiceImpl {
    + getLabQueue(labTechnicianId: Long): List<LabOrderResponse>
}

class LabOrderRepository {
    + findByStatusOrderByOrderTimeAsc(status: LabOrderStatus): List<LabOrder>
}

class LabOrder {
    - orderId: Long
    - status: LabOrderStatus
    - orderTime: LocalDateTime
    - testTypes: List<String>
    + getOrderId(): Long
    + getStatus(): LabOrderStatus
    + getOrderTime(): LocalDateTime
}

enum LabOrderStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    CANCELLED
}

class Patient {
    - patientId: Long
    - fullName: String
}

class Doctor {
    - doctorId: Long
    - fullName: String
}

class LabOrderResponse {
    - orderId: Long
    - status: String
    - orderTime: LocalDateTime
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

LabOrderController ..> LabOrderService : uses
LabOrderController ..> ApiResponse : creates
LabOrderService <|.. LabOrderServiceImpl : implements
LabOrderServiceImpl ..> LabOrderRepository : uses
LabOrderServiceImpl ..> LabOrderResponse : creates

LabOrderRepository ..> LabOrder : manages
LabOrder "1" -- "1" LabOrderStatus : uses >

LabOrder "0..*" o-- "1" Patient : associated with >
LabOrder "0..*" o-- "1" Doctor : ordered by >

@enduml
